[tool.poetry]
name = "diagram_by_diagrams"
version = "1.0.0"
description = ""
authors = ["hshmtkzhr <hshmtkzhr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
graphviz = "<=0.14.0"
diagrams = "^0.18.0"
pylint = "^2.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.00", "setuptools"]
build-backend = "poetry.masonry.api"
